--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
     <h1>Welcome to My GitHub Pages Site</h1>
     <p>This is the main page of my GitHub Pages website.</p>
-    <p><a href="https://skibigcse.github.io/skibigcse.pdf" target="_blank">SkibiGCSE PDF</a></p>
+    <p><a href="skibigcse.pdf" target="_blank">SkibiGCSE PDF</a></p>
 </body>
 </html>
